vlagent: implement Kubernetes log collector (#815)
Co-authored-by: Aliaksandr Valialkin <valyala@victoriametrics.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /gocache-for-docker
 /victoria-logs-data
 /vlagent-remotewrite-data
+/vlagent-kubernetes-checkpoints.json
 .DS_store
 Gemfile.lock
 /_site
