all: use /insert/native address instead of /internal/insert by default across the code and docs
The /internal/insert endpoint isn't recommended to use from the security PoV,
since it accepts logs with arbitrary tenantIDs.

The /insert/native endpoint stores logs with tenantIDs specified
via AccountID and ProjectID headers according to https://docs.victoriametrics.com/victorialogs/#multitenancy ,
in the same way as other endpoints at /insert/* do. This is the preferred way
to write logs to from vlagent, so use it across the code and docs.

This is a follow-up for 21030886f452d6fc26d59b8d25ece728dc1aca4b

Updates https://github.com/VictoriaMetrics/VictoriaLogs/pull/918
Updates https://github.com/VictoriaMetrics/VictoriaLogs/issues/38

--- a/deployment/docker/victorialogs/compose-base.yml
+++ b/deployment/docker/victorialogs/compose-base.yml
@@ -56,8 +56,8 @@ services:
       - vlagent:/vlagent
     command:
       - '--remoteWrite.tmpDataPath=/vlagent'
-      - '--remoteWrite.url=http://victorialogs-1:9428/internal/insert'
-      - '--remoteWrite.url=http://victorialogs-2:9428/internal/insert'
+      - '--remoteWrite.url=http://victorialogs-1:9428/insert/native'
+      - '--remoteWrite.url=http://victorialogs-2:9428/insert/native'
       - '--syslog.listenAddr.tcp=0.0.0.0:8094'
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://127.0.0.1:9429/health"]
